[project]
name = "erpnext_import_tracker"
authors = [{ name = "Smurik Solutions", email = "info@smurik.com" }]
description = "Purchaser-side import shipment tracking for ERPNext (India) - CHA follow-up, BOE checklist, clearance workflow"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
